<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".presentation.DetailFragment">

    <ImageView
        android:id="@+id/iv_imagedetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_sateususayam"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_foodtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/cl_order"
        app:layout_constraintTop_toBottomOf="@id/iv_imagedetail">

        <TextView
            android:id="@+id/tv_foodname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="Dim Sum"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/tv_foodprice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_foodprice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:text="Rp. 18.000"
            android:textColor="@color/priceColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_foodname"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_foodname" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/text_rating"
            app:layout_constraintBottom_toTopOf="@id/tv_food_description"
            app:layout_constraintStart_toEndOf="@id/iv_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_foodname" />

        <TextView
            android:id="@+id/tv_food_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/text_food_desc"
            app:layout_constraintTop_toBottomOf="@id/iv_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_foodtitle">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_shop"
            app:layout_constraintEnd_toStartOf="@id/ll_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_location"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/text_title_location"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_desc_location" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_addtocart"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btn_addcart"
                app:layout_constraintEnd_toStartOf="@id/btn_buynow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_buynow"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="10dp"
                android:text="@string/btn_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_addtocart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>